added submodule for absence app

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DiscoverYourPowerLevel1"]
 	path = DiscoverYourPowerLevel1
 	url = https://github.com/Nimaoth/DiscoverYourPowerLevel.git
+[submodule "AbsenceApp"]
+	path = AbsenceApp
+	url = https://github.com/LethaMasahiro/AbsenceApp.git
